# backtest_simulator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  The-Plan.md  pyproject.toml
.github/: fail_loud_budget.json  module_budgets.json  typing_budget.json
.github/ISSUE_TEMPLATE/: slice.yml
.github/rulesets/: main.json
.github/workflows/: deploy_on_merge.yml  pr_checks_canonical_bundle.yml  pr_checks_cc.yml  pr_checks_codeql.yml  pr_checks_fail_loud.yml  pr_checks_golden_sweep.yml  pr_checks_honesty.yml  pr_checks_lint.yml  pr_checks_package_coverage.yml  pr_checks_ruleset.yml  pr_checks_slice.yml  pr_checks_slice_on_issue.yml  pr_checks_sweep_reference.yml  pr_checks_typing.yml  pr_checks_version.yml
backtest_simulator/: __init__.py  __main__.py  _limen_cache.py  cli.py  determinism.py  driver.py  environment.py  exceptions.py  launcher.py  wall_clock.py
backtest_simulator/cli/: __init__.py  __main__.py  _metrics.py  _pipeline.py  _run_window.py  _session_manifest.py  _signals_builder.py  _stats.py  _typing_runner.py  _verbosity.py
backtest_simulator/cli/commands/: __init__.py  enrich.py  gate.py  lint.py  notebook.py  run.py  sweep.py  test.py  typecheck.py  version.py
backtest_simulator/feed/: clickhouse.py  lookahead.py  parquet_fixture.py  protocol.py
backtest_simulator/honesty/: __init__.py  atr.py  book_gap.py  capital.py  conservation.py  cpcv.py  deflated_sharpe.py  intake_hooks.py  ledger_parity.py  maker_fill.py  market_impact.py  pbo.py  risk.py  slippage.py  spa.py
backtest_simulator/launcher/: __init__.py  action_submitter.py  clock.py  launcher.py  poller.py  replay_clock.py
backtest_simulator/pipeline/: __init__.py  bundle.py  experiment.py  manifest_builder.py
backtest_simulator/pipeline/_strategy_templates/: __init__.py  long_on_signal.py
backtest_simulator/reporting/: enriched_results.py  ledger.py  metrics.py
backtest_simulator/runtime/: enum_bridge.py  nexus_runtime.py  orjson_patch.py  outcome_translator.py
backtest_simulator/sensors/: precompute.py
backtest_simulator/strategies/: __init__.py  buy_and_hold.py  inverse_prescient.py  over_trading.py  random_timing.py  zero_trade.py
backtest_simulator/venue/: _adapter_internals.py  fees.py  fills.py  filters.py  simulated.py  types.py
docs/: CLI.md  cli.md
scripts/: __init__.py  check_budget_ratchet.py  check_coverage_floor.py  check_file_size_balance.py  check_module_budgets.py  check_module_docstrings.py  check_no_swallowed_violations.py  check_no_swallowed_violations.sh
stubs/clickhouse_connect/: __init__.pyi
stubs/clickhouse_connect/driver/: __init__.pyi  client.pyi
stubs/limen/: __init__.pyi
stubs/scipy/: __init__.pyi  stats.pyi
tests/: conftest.py  test_lazy_imports.py  test_limen_cache.py  test_wall_clock.py
tests/cli/: __init__.py  test_bts_gate_typing_parity.py  test_bts_lint_paths.py  test_docs.py  test_gate.py  test_help.py  test_kline_size_resolution.py  test_lint.py  test_module_layout.py  test_no_external_cli.py  test_notebook.py  test_pick_decoders_cache_key.py  test_print_run_activity_readout.py  test_run_check_parity_vs.py  test_run_help.py  test_run_resolve_decoder.py  test_run_window_atr_provider.py  test_run_window_sizing.py  test_run_window_trade_window.py  test_run_window_tz_promotion.py  test_runtime_prediction_capture.py  test_sell_exit_validation.py  test_signals_parity.py  test_stats.py  test_sweep_parity_guard.py  test_typecheck.py  test_version.py
tests/fixtures/canonical/: checksums.sha256  klines.parquet  sweep_function_coverage.json  sweep_reference.json
tests/fixtures/canonical/expected/: stdout.txt  sweep_per_tick.csv  sweep_per_window.csv
tests/fixtures/github/: ruleset_live_target.json  ruleset_live_target_without_bypass_actors.json  ruleset_live_unexpected_field.json  ruleset_live_with_bypass_actor.json
tests/fixtures/market/: btcusdt_1h_fixture.parquet  btcusdt_trades_30min.parquet
tests/golden/: test_bts_sweep_canonical.py
tests/honesty/: test_adapter_wrapper_paths.py  test_book_gap_instrumentation.py  test_capital_invariants.py  test_capital_lifecycle.py  test_close_by_window_end.py  test_conservation.py  test_cpcv_purge_embargo.py  test_deflated_sharpe_and_pbo_and_spa.py  test_determinism.py  test_dump_event_spine_to_jsonl.py  test_expired_outcome_retry.py  test_inverse_prescient.py  test_ledger_parity_vs_praxis.py  test_lookahead.py  test_market_impact.py  test_on_save_purity.py  test_outcome_dispatch_route.py  test_passive_maker_realism.py  test_prescient_strategy.py  test_r_denominator_gameability.py  test_risk.py  test_risk_edge_cases.py  test_sanity_buy_hold.py  test_sanity_over_trading.py  test_sanity_random.py  test_sanity_zero_trade.py  test_sell_capital_substitute_seam.py  test_sell_close_semantics.py  test_shuffle_bars.py  test_signals_table_path_id.py  test_slippage_calibration.py  test_slippage_wired_into_venue.py  test_split_alignment.py  test_stop_enforcement.py  test_validation_parity.py
tests/integration/: test_end_to_end.py
tests/launcher/: test_action_submitter.py  test_clock.py  test_launcher_contract.py  test_no_bts_intake_pre_hooks.py  test_replay_clock.py
tests/pipeline/: test_bundle.py  test_experiment.py  test_force_flatten_at_window_close.py  test_manifest_builder.py
tests/pipeline/fixtures/: toy_experiment.py
tests/tools/: test_bloat_gate_mutation.py  test_bloat_gates_contract.py  test_ci_contract.py  test_lint_ci_contract.py  test_no_swallowed_violations.py
tests/venue/: __init__.py  test_filters.py  test_simulated.py  test_window_end_clamp.py
tools/: check_canonical_bundle.py  check_coverage_floor.py  check_file_size_balance.py  check_module_budgets.py  check_package_coverage.py  check_sweep_reference.py  check_test_code_ratio.py  fail_loud_gate.py  local_typing_gate.py  normalize_sweep_outputs.py  refresh_siblings.sh  slice_gate.py  typing_gate.py
