[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest_simulator"
version = "1.4.0"
description = "Honest, gate-enforced backtester for unmodified Nexus strategies against unmodified Praxis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff==0.15.11",
  "pyright==1.1.408",
  "vulture>=2.14",
  "coverage[toml]>=7.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest_simulator*"]
exclude = ["tests*", "demo*"]

# --------------------------------------------------------------------
# Pyright strict configuration.
#
# Every report* key here is either "error" or absent (to inherit the
# strict default). The pr_checks_typing workflow asserts this config
# on every PR; weakening any of these values, or removing any required
# key, fails the build.
#
# Note on reportExplicitAny: pyright 1.1.408 (the pinned toolchain
# version) emits `Config contains unrecognized setting` for this key
# and does not honor it. We keep it here as a forward-compatible
# config-presence requirement for the day pyright respects it. The
# Any escape hatch is enforced today by the AST-based sub-gate in
# tools/typing_gate.py (gate_any_references_ast), which resolves
# every surface form including module-level assignment aliases.
# --------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["backtest_simulator"]
exclude = [
  "**/__pycache__",
  "build",
  "dist",
  "tests",
  "demo",
]
reportExplicitAny = "error"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportConstantRedefinition = "error"
reportImportCycles = "error"

# --------------------------------------------------------------------
# Ruff configuration — style + lint gate that pairs with pyright.
# --------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "demo",
  "tests/fixtures",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
  "RUF",   # ruff-specific
  "BLE",   # flake8-blind-except -- always raise, never bare except
  "ANN",   # flake8-annotations -- catches missing type annotations
  # Bloat-mechanical law (slice #11). Enforce minimum-viable coding.
  "C901",      # cyclomatic complexity cap
  "PLR0912",   # too-many-branches
  "PLR0913",   # too-many-arguments
  "PLR0915",   # too-many-statements
  "T201",      # no print()
  "FIX001",    # no TODO
  "FIX002",    # no FIXME
  "FIX003",    # no XXX
  "FIX004",    # no HACK
  "ERA001",    # no commented-out code
  "D200",      # one-line docstring should fit on one line
  "D205",      # blank line after summary
  "D415",      # summary ends with period/question/bang
  "PIE790",    # unnecessary pass / docstring-only body
]
ignore = [
  "E501",   # line length handled by formatter
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", "ANN", "BLE001",
  "PLR0912", "PLR0913", "PLR0915",
  "D200", "D205", "D415",
]
# tools/ is Out of Scope for slice #11 and legitimately uses patterns
# (print banners, dense scan loops, TODOs in imported code, etc.)
# that the bloat rules would otherwise require editing. Exempt the
# full set that would force modifying tools/. PIE790 stays on.
"tools/**/*.py" = [
  "C901", "PLR0912", "PLR0913", "PLR0915",
  "T201",
  "FIX001", "FIX002", "FIX003", "FIX004",
  "ERA001", "D200", "D205", "D415",
]
# scripts/ hosts this slice's own gate scripts. They print banners by
# design. Same exemption set, same rationale, same reason: the gates
# are allowed to be the gates.
"scripts/**/*.py" = [
  "C901", "PLR0912", "PLR0913", "PLR0915",
  "T201",
  "FIX001", "FIX002", "FIX003", "FIX004",
  "ERA001", "D200", "D205", "D415",
]

[tool.ruff.lint.isort]
known-first-party = ["backtest_simulator"]

[tool.vulture]
paths = ["backtest_simulator"]
min_confidence = 80

[tool.coverage.run]
branch = true
source = ["backtest_simulator"]

[tool.coverage.report]
show_missing = true

[tool.coverage.json]
output = "coverage.json"
