[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest_simulator"
version = "2.3.0"
description = "Honest, gate-enforced backtester for unmodified Nexus strategies against unmodified Praxis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "freezegun>=1.5.0",
  "polars>=1.0",
  "numpy>=2.0",
  "scipy>=1.13",
  "aiosqlite>=0.20",
  "clickhouse-connect>=0.7",
  # `feed/clickhouse.py` imports pyarrow at module scope to convert
  # the ClickHouse arrow-format query into polars; without it the
  # eager `from backtest_simulator.feed.clickhouse import ...` in
  # `__init__.py` fails on a slim install before the lazy
  # integration block has a chance to run.
  "pyarrow>=15.0",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff==0.15.11",
  "pyright==1.1.408",
  "vulture>=2.14",
  "coverage[toml]>=7.6",
  "scikit-learn>=1.5",
  "jupyter>=1.0",
  "nbconvert>=7.0",
  "ipykernel>=6.0",
]

# Private sibling packages installed from Vaquum GitHub. Intentionally
# not pinned — Praxis / Nexus / Limen evolve, backtest_simulator evolves
# with them. If a sibling breaking change lands, the fix is to update
# the shim, not to freeze a stale SHA. CI configures a git credential
# helper with ${{ secrets.SIBLING_INSTALL_TOKEN }} before running
# `pip install -e '.[integration]'`.
integration = [
  # URLs (no .git suffix, no @ref) match the canonical forms used by
  # Praxis and Nexus in their own pyprojects. pip's resolver treats
  # distinct source URLs as different packages, so any variation
  # (`.git`, `@main`, etc.) triggers a ResolutionImpossible. Leave
  # version resolution to each repo's main branch and let pip unify
  # on the URL string.
  "vaquum-praxis @ git+https://github.com/Vaquum/Praxis",
  # nexus and limen are pulled transitively by praxis. Duplicating
  # them here would force-pin a URL form and trip the resolver.
]

[tool.uv]
# Force every consumer of `vaquum_limen` (direct or transitive) onto
# a single canonical URL so uv's resolver collapses the two specifier
# forms — Praxis declares `git+https://github.com/Vaquum/Limen`
# (untagged → main); Nexus declares `git+https://github.com/Vaquum/Limen@v2.4.3`
# (tagged) — into one. Without this override uv treats the distinct
# URL strings as conflicting package sources and aborts install with
# `Requirements contain conflicting URLs`. The untagged form tracks
# main, matching the operator policy "always take the latest Limen".
# `tool.uv.sources` (used for direct-dep source overrides) does NOT
# rewrite transitive specifiers; `override-dependencies` does — it's
# the documented uv knob for resolving sibling-lib URL drift.
override-dependencies = [
    "vaquum_limen @ git+https://github.com/Vaquum/Limen",
    "vaquum-nexus @ git+https://github.com/Vaquum/Nexus",
]

[project.scripts]
bts = "backtest_simulator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest_simulator*"]
exclude = ["tests*", "demo*"]

# --------------------------------------------------------------------
# Pyright strict configuration.
#
# Every report* key here is either "error" or absent (to inherit the
# strict default). The pr_checks_typing workflow asserts this config
# on every PR; weakening any of these values, or removing any required
# key, fails the build.
#
# Note on reportExplicitAny: pyright 1.1.408 (the pinned toolchain
# version) emits `Config contains unrecognized setting` for this key
# and does not honor it. We keep it here as a forward-compatible
# config-presence requirement for the day pyright respects it. The
# Any escape hatch is enforced today by the AST-based sub-gate in
# tools/typing_gate.py (gate_any_references_ast), which resolves
# every surface form including module-level assignment aliases.
# --------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["backtest_simulator"]
exclude = [
  "**/__pycache__",
  "build",
  "dist",
  "tests",
  "demo",
]
# Local stub directory for sibling libraries that ship without
# py.typed AND have signatures that propagate `Any` through their
# call sites (clickhouse_connect.get_client, limen UEL.run, etc.).
# The stubs declare only the named-keyword subset we use; pyright
# reads the stub instead of the source so the call sites read clean.
stubPath = "stubs"
reportExplicitAny = "error"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportConstantRedefinition = "error"
reportImportCycles = "error"

# --------------------------------------------------------------------
# Ruff configuration — style + lint gate that pairs with pyright.
# --------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "demo",
  "tests/fixtures",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
  "RUF",   # ruff-specific
  "BLE",   # flake8-blind-except -- always raise, never bare except
  "ANN",   # flake8-annotations -- catches missing type annotations
  # Bloat-mechanical law (slice #11). Enforce minimum-viable coding.
  "C901",      # cyclomatic complexity cap
  "PLR0912",   # too-many-branches
  "PLR0913",   # too-many-arguments
  "PLR0915",   # too-many-statements
  "T201",      # no print()
  "FIX001",    # no TODO
  "FIX002",    # no FIXME
  "FIX003",    # no XXX
  "FIX004",    # no HACK
  "ERA001",    # no commented-out code
  "D200",      # one-line docstring should fit on one line
  "D205",      # blank line after summary
  "D415",      # summary ends with period/question/bang
  "PIE790",    # unnecessary pass / docstring-only body
]
ignore = [
  "E501",   # line length handled by formatter
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-statements = 50

[tool.ruff.lint.per-file-ignores]
# SimulatedVenueAdapter.submit_order must byte-match the Praxis
# VenueAdapter Protocol signature (10 args). A helper-extraction
# refactor would break the runtime_checkable isinstance() check.
"backtest_simulator/venue/simulated.py" = ["PLR0913"]
# `build_validation_pipeline` mirrors Praxis's `_build_validation_pipeline`
# parameter shape (slice #28). The 9 kwargs (`nexus_config`,
# `capital_pool`, `reservation_ttl_seconds`, three optional
# limits/policy injection points, three snapshot providers) are the
# real parity surface — collapsing them into a config bundle would
# diverge from the Praxis reference and lose the per-stage knob
# clarity. Same posture as `launcher.py`'s VenueAdapter Protocol
# exemption above: the parameter count is the contract.
"backtest_simulator/honesty/capital.py" = ["PLR0913"]
# launcher.py's `wrapped_submit` mirrors the 9-param Praxis Protocol
# signature (it wraps SimulatedVenueAdapter.submit_order without
# changing arity).
"backtest_simulator/launcher/launcher.py" = ["PLR0913"]
# `_Config.__init__` mirrors `StrategyParamsSpec`'s named fields
# 1:1 (symbol, capital, kelly_pct, estimated_price, stop_bps,
# force_flatten_after, maker_preference). The strategy template
# is the bts -> Nexus boundary; bundling these into a config
# object would lose the field clarity readers rely on when
# auditing baked params.
"backtest_simulator/pipeline/_strategy_templates/long_on_signal.py" = ["PLR0913"]
# The CLI subcommand modules legitimately print() per-run summaries to
# stdout (the operator's debug surface) and the sweep / run / pipeline
# orchestration carries enough branches to exceed PLR0912 / PLR0915.
# These are CLI surfaces, not library code; the bloat caps are aimed
# at the latter. Overlaps with `tools/` on the bloat-rule set
# (C901/PLR0912/PLR0913/PLR0915 + T201 + ERA001/D2xx) but
# intentionally narrower — `tools/` additionally exempts
# FIX001-FIX004 (operator-staged TODO markers in gate scripts) which
# the CLI surface should not need.
"backtest_simulator/cli/**/*.py" = [
  "C901", "PLR0912", "PLR0913", "PLR0915",
  "T201",
  "ERA001", "D200", "D205", "D415",
]
"tests/**/*.py" = [
  "S101", "ANN", "BLE001",
  "PLR0912", "PLR0913", "PLR0915",
  "D200", "D205", "D415",
]
# tools/ hosts every gate script — `*_gate.py` (cc, fail_loud,
# ruleset, slice, typing, version) AND `check_*.py` (bloat budgets,
# coverage floor, etc., merged from the former scripts/ dir). They
# print banners by design and use patterns the bloat rules would
# otherwise require editing. PIE790 stays on.
"tools/**/*.py" = [
  "C901", "PLR0912", "PLR0913", "PLR0915",
  "T201",
  "FIX001", "FIX002", "FIX003", "FIX004",
  "ERA001", "D200", "D205", "D415",
]

[tool.ruff.lint.isort]
known-first-party = ["backtest_simulator"]

[tool.vulture]
paths = ["backtest_simulator"]
min_confidence = 80

[tool.coverage.run]
branch = true
source = ["backtest_simulator"]

[tool.coverage.report]
show_missing = true

[tool.coverage.json]
output = "coverage.json"
